Hilangkan uang yang diberikan, left bar untuk desktop tampil kecil

--- a/style/admin-print.css
+++ b/style/admin-print.css
@@ -137,6 +137,11 @@ div#listminified .total-pesanan {
 	background-color: #83ADF3;
 }
 
+#area-select label.printed {
+	background-color: #000000 !important;
+	color: #FFFFFF !important;
+}
+
 #area-select label:hover {
 	background-color: #e8efff;
 }
