--- a/style/global.css
+++ b/style/global.css
@@ -44,7 +44,7 @@ input[type="text"], input[type="password"], textarea {
 	max-width: 100%;
 }
 
-input[type="text"].small-text {
+input[type="text"].small-text, input[type="number"] {
 	width: 60px;
 	font-size: 11px;
 	padding: 3px 5px;
